fix: now <code /> element has overflow

--- a/src/app/components/messenger/settings/settings.component.css
+++ b/src/app/components/messenger/settings/settings.component.css
@@ -1,6 +1,9 @@
+.code-wrapper {
+    max-width: 100%;
+}
+
 code {
-  white-space: pre-wrap;
-  word-break: break-word;
+    white-space: pre;
 }
 
 @media (min-width: 1200px) {
